--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/msrarg/Desafio_09_Mocks/issues"
   },
-  "homepage": "https://github.com/msrarg/Desafio_09_Mocks#readme"
+  "homepage": "https://github.com/msrarg/Desafio_09_Mocks#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "mongoose": "^6.5.0"
+  }
 }
